# MLOps_PipeLine

./: .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_README.md  Dockerfile  Observability.md  README.md  app.py  deploy_changes.sh  dev.ps1  docker-compose.yml  dvc.yaml  main.py  model_dag.py  production_app.py  pyproject.toml  requirements.txt  run_observability.ps1  start_observability.ps1  start_observability.sh
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  model-training.yml  production-deploy.yml
artifacts/data_ingestion/test_data/: test.csv  test.csv.dvc
artifacts/data_ingestion/train_data/: train.csv  train.csv.dvc
artifacts/data_transformation/: preprocessor.pkl  test.csv  train.csv
artifacts/data_validation/: data_quality_report.json  drift_report.html  validation_status.txt
artifacts/feature_engineering/correlation_analysis/: correlation_matrix.csv
artifacts/feature_engineering/engineered_features/: test_featured.csv  train_featured.csv
artifacts/feature_engineering/feature_importance/: feature_importance.csv
artifacts/feature_engineering/feature_selection_results/: selection_report.json
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.pkl
config/: config.yaml  feature_config.yaml  params.yaml  schema.yaml
k8s/: deployment.yaml  ingress.yaml  mlops-deployment.yaml  resources.yaml  service.yaml  simple-deployment.yaml
logs/: ml_pipeline.json
observability/: alerts.yml  docker-compose.yml
observability/alertmanager/: alertmanager.yml
observability/fluentd/: fluent.conf
observability/fluentd/conf/: fluent.conf
observability/grafana/dashboards/: ml-pipeline-dashboard.json
observability/grafana/provisioning/: dashboards.yml  datasources.yml
observability/grafana/provisioning/dashboards/: ml-pipeline-dashboard.json
observability/prometheus/: alerts.yml  prometheus.yml
scripts/: validate_pipeline.py
src/mlpipeline/: __init__.py
src/mlpipeline/components/: data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_trainer.py
src/mlpipeline/config/: configuration.py
src/mlpipeline/constants/: __init__.py
src/mlpipeline/entity/: artifact_entity.py  config_entity.py
src/mlpipeline/exception/: exception.py
src/mlpipeline/logging/: logger.py
src/mlpipeline/observability/: logging_config.py  metrics.py  tracing.py
src/mlpipeline/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_feature_engineering.py  stage_04_data_transformation.py  stage_05_model_trainer.py  stage_06_model_evaluation.py
src/mlpipeline/utils/: common.py
static/: script.js  styles.css
templates/: dashboard.html  evidently_dashboard.html  index.html
tests/: conftest.py  test_integration.py  test_pipeline.py
tests/integration/: test_api_integration.py
tests/unit/: test_components.py
