[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.3",
    "evidently>=0.7.14",
    "kaggle>=1.7.4.5",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.0.6",
    "dvc>=3.63.0",
    "elasticsearch>=9.1.0",
    "flask>=3.1.2",
    "jaeger-client>=4.8.0",
    "joblib>=1.5.2",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "opentracing>=2.4.0",
    "pandas>=2.3.2",
    "prometheus-client>=0.22.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.5",
]
